<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimaryLight"
    tools:context=".Menu">

    <ImageView
        android:id="@+id/imageView"
        style="@style/image"
        android:contentDescription="@string/virus"
        app:srcCompat="@drawable/virus" />

    <Button
        android:id="@+id/btnScan"
        style="@style/top_button"
        android:text="@string/scan_and_enter_data" />

    <Button
        android:id="@+id/btnSeeAll"
        style="@style/button"
        android:text="@string/see_all_data_of_a_specific_learner" />

    <Button
        android:id="@+id/btnNew"
        style="@style/button"
        android:text="@string/new_learner" />
</LinearLayout>