<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardView"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp"
        app:cardUseCompatPadding="false"
        style="@style/cardViewStyle">

        <LinearLayout
            style="@style/vertical_linear_layout">

            <TextView
                android:id="@+id/tvDate"
                style="@style/date_textView"
                android:text=""/>

            <TextView
                android:id="@+id/tvTemp"
                style="@style/temp_textView"
                android:text=""/>

            <TextView
                android:id="@+id/tvHighRiskCountry"
                style="@style/question_textView"
                android:text="@string/did_you_travel_to_a_high_risk_country_in_the_last_14_days"
                />

            <TextView
                android:id="@+id/tvHighRiskAnswer"
                style="@style/question_textView"
                android:text="" />

            <TextView
                android:id="@+id/tvContactWithCovidPeople"
                style="@style/question_textView"
                android:text="@string/did_you_have_contact_with_anyone_with_confirmed_covid_19_in_the_last_14_days" />

            <TextView
                android:id="@+id/tvContactAnswer"
                style="@style/question_textView"
                android:text="" />

            <TextView
                android:id="@+id/tvHaveSymptoms"
                style="@style/question_textView"
                android:text="@string/do_you_have_symptoms_such_as_fever_cough_and_difficulty_breathing" />

            <TextView
                android:id="@+id/tvHaveSymptomsAnswer"
                style="@style/question_textView"
                android:text="" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>