<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="@color/colorPrimaryLight"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="200dp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tvLoad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_horizontal"
        android:text="@string/loading_please_wait"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/login_form"
        android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        style="@style/header_text"
        />

    <EditText
        android:id="@+id/etEmail"
        style="@style/email_edit_text"
        android:hint="@string/enter_email_address"
        android:autofillHints="" />

    <EditText
        android:id="@+id/etPassword"
        style="@style/password_edit_text"
        android:hint="@string/enter_password"
        android:autofillHints="" />

    <LinearLayout
        style="@style/horizontal_layout">

        <Button
            android:id="@+id/btnLogin"
            style="@style/login_button"
            />

        <Button
            android:id="@+id/btnRegister"
            style="@style/register_button"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/tvForgotPassword"
        android:clickable="true"
        style="@style/forgot_password"
        />

    </LinearLayout>
</LinearLayout>